--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,33 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/LOGO.png" />
+		<link rel="icon" href="/favicon.png" />
+		<!-- <script src="https://cdn.tailwindcss.com"></script> -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+			rel="stylesheet"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div class="lexend-normal" style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
+
+<style>
+	.lexend-normal {
+		font-family: 'Lexend', serif;
+		font-optical-sizing: auto;
+		font-weight: 400;
+		font-style: normal;
+	}
+	.lexend-bold {
+		font-family: 'Lexend', serif;
+		font-optical-sizing: auto;
+		font-weight: 700;
+		font-style: normal;
+	}
+</style>
