--- a/src/app.html
+++ b/src/app.html
@@ -18,17 +18,4 @@
 	</body>
 </html>
 
-<style>
-	.lexend-normal {
-		font-family: 'Lexend', serif;
-		font-optical-sizing: auto;
-		font-weight: 400;
-		font-style: normal;
-	}
-	.lexend-bold {
-		font-family: 'Lexend', serif;
-		font-optical-sizing: auto;
-		font-weight: 700;
-		font-style: normal;
-	}
-</style>
+<style></style>
